Fixed the gap between query input and the button

--- a/css/style.css
+++ b/css/style.css
@@ -788,6 +788,18 @@ body {
     font-family: var(--hand-font);
 }
 
+@media (max-width: 1680px) and (min-width: 768px) {
+    #task-textboxes {
+        padding-right: 1rem;
+    }
+}
+
+@media (max-width: 768px) {
+    #query-model-button {
+        margin-right: 0.5rem;
+    }
+}
+
 #task-view #model-answer {
     color: var(--col-good-blue-80);
     border-color: var(--col-good-blue-50) !important;
